# loan-management-system

./: .dockerignore  Dockerfile  README.md  exceptions.py  permissions.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt
.github/workflows/: test.yml
core/: settings.py  urls.py
fraud/: apps.py  constants.py  models.py  services.py
fraud/migrations/: 0001_initial.py  0002_alter_fraudflag_reason.py
loans/: filters.py  models.py  serializers.py  services.py  test_utils.py  tests.py  urls.py  views.py
loans/migrations/: 0001_initial.py  0002_initial.py  0003_alter_loanapplication_status.py  0004_alter_loanapplication_amount_requested.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customer_flagged_for_fraud.py  0002_remove_customer_phone_number_baseuser_phone_number.py  0003_remove_customer_date_of_birth_baseuser_date_of_birth_and_more.py
